# ufgagentes-pub

./: .gitignore  README.md
01-ePrompt/: README.md
03-API/trabalho/: .dockerignore  .env.sample  .gitignore  Dockerfile  auth.py  database.py  main.py  prompt.md  prompt_verificacao.md  readme.md  requirements.txt  settings.py
03-API/trabalho/models/: __init__.py  acordaos.py  base.py  commons.py  logs.py  schemas.py  usuarios.py
06-EAD/: Main.ipynb  README.md  TrabalhoFinalEAD-ValérioViégasWittler.pptx  collect_googlenews.py  collect_justwatch.py  common.py  extractors.py  googlenews_collector.py  justwatch_collector.py  pyproject.toml
06-EAD/data/: googlenews_mentions_count copy.csv  googlenews_mentions_count.csv  justwatch_rank_2025-06-21.csv  justwatch_rank_2025-06-22.csv
08-AM/: 1.0. EDA.ipynb  1.1.EDA-df_summary_types.csv  1.1.EDA-df_test-cleaned.csv  1.1.EDA-df_train-cleaned.csv  2.0 Baseline Inicial.ipynb  2.2.Modeling-Resultados-combinados.csv  3.0. Melhorando com Feature Engineering.ipynb  Artigo.docx  README.md  estatisticas_descritivas.xlsx  pyproject.toml
