[project]
name = "dis008-am"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.19"

dependencies = [
    # Core dependencies
    "numpy==1.23.5",
    "pandas==2.2.3",
    "scipy==1.11.2",
    "pickle5==0.0.11",
    #"warnings==0.1.0",
    "scikit-learn==1.5.1",
    "xgboost==1.6.1",
    "lightgbm==3.3.5",
    "imbalanced-learn==0.12.3",
    "deap==1.4.1",
    "hyperopt==0.2.7",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "shap==0.46.0",
    "plotly==5.24.1", # For interactive visualizations
    "joblib==1.4.2",
    "typing-extensions==4.11.0",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
    "catboost>=1.2.8",
    "umap-learn>=0.5.7",
    "tensorflow>=2.17.1",
    "rdkit>=2025.3.5",
    "ghostml>=0.3.0",
    "rdkit-pypi>=2022.9.5",
    "pyampute>=0.0.3",
    "statsmodels>=0.14.5",
    "openpyxl>=3.1.5",
    "praw>=7.8.1",
]
